Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17859

[REG 4.2 -> 4.3] plugins.qbs is missing from project tree

XMLWordPrintable

    • 4b39baa8c1cbcef7c78fe44815db8ae99666fb27

      1. Have a checkout of Creator's repository at tag v4.1.0-beta1.
      2. Open qtcreator.qbs from this repository.
      3. Wait for parsing to finish.
      4. Open file src\plugins\plugins.qbs, e.g. using the Locator.
      5. In the Projects view, click the "Synchronize with Editor" button.
        Nothing will happen. It seems like the file is not shown in the project tree at all.

      The Projects view should list all involved files. Creator 4.2 showed plugins.qbs in Qt Creator/Sources/Plugins

      Found by Squish test tst_opencreator_qbs.

        For Gerrit Dashboard: QTCREATORBUG-17859
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes