QbsProjectManager: Add project file nodes for sub-projects

They got lost somehow during the project tree refactoring.

Task-number: QTCREATORBUG-17859
Change-Id: I1d1178c3d0932322604e7035f15dcc4490309ca9
Reviewed-by: Jake Petroules <jake.petroules@qt.io>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>